--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="overlays"></div>
+    <script src="https://kit.fontawesome.com/3d43d3975e.js" crossorigin="anonymous"></script>
   </body>
 </html>
